@@ -1,6 +1,14 @@
 ﻿以下功能最近几个月别想用了：
 1、出兵
 
+-= Stran 1.2.7 [2009-7-21 是 Stran 两周年纪念日哟] 发布 =-
+- 修正了用户名中非法字符导致崩溃的问题
+- 加入大兵马建造支持，没有相关建筑时请勿滥用以免发生危险 (感谢chihsun)
+- 支持预设运输目标功能，可在Transfer中，每行填入 X|Y|名称 来指定预设运输目标。例如 100|160|食堂村。仅供同服务器内使用，请勿滥用以免发生危险 (感谢chihsun)
+- 宝库现在可以造到20级了，基本资源田现在可以造到21级了 (感谢chihsun)
+- 修正了部分研发升级的探测问题 (感谢chihsun)
+- 历史上的今天：2007-7-21，Stravian项目正式创建。在这2年的时间里，感谢各位玩家的支持，接下来，也请继续支持下去。谢谢！
+
 -= Stran 1.2.6 [Nikola Tesla] 发布 =-
 - 在option中加入autorun=true，可在启动程序后自动登录所有账号，请谨慎使用 (感谢ss0628)
 - 修正了拆除和平仓的探测问题(要求测试) (感谢chihsun和lovermagic)
